update dev-nhuptq 1303

--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@angular/router": "~12.2.0",
     "angularx-social-login": "^4.0.1",
     "bootstrap": "^4.6.1",
+    "creditcardpayments": "^1.0.3",
     "firebase": "^9.6.7",
+    "ngx-pagination": "^5.1.1",
     "ngx-paypal": "^8.0.0",
     "rxfire": "^6.0.0",
     "rxjs": "~6.6.0",
@@ -31,7 +33,7 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.13",
+    "@angular-devkit/build-angular": "^12.2.13",
     "@angular/cli": "~12.2.13",
     "@angular/compiler-cli": "~12.2.0",
     "@types/jasmine": "~3.8.0",
